--- a/index.html
+++ b/index.html
@@ -119,10 +119,10 @@
 							<!--main content-->
 							<section class="intro-text">
 								<div class="ani-wrap">
-									<h1 class="animated "> We Are<br/>Coming Soon</h1>
+									<h1 class="animated "> SLS<br/>IMMERSIVE</h1>
 								</div>
 								<div class="ani-wrap">
-									<h5 class="animated ">WE ARE CURRENTLY WORKING ON OUR NEW WEBSITE</h5>
+									<h5 class="animated ">Development – Creation - Distribution</h5>
 								</div>	
 								<p class="col-lg-10 col-sm-12 pad-zero">This demo is crafted specially for corporate & small or big businesses. Giving it a more standard and decent look it appeals everybody. It includes everything you need from notify form, google maps, services to twitter feed.</p>
 								<div class="clearfix"></div>
